--- a/web-stuff/css/notification.css
+++ b/web-stuff/css/notification.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -20,6 +19,9 @@ body {
 .notification-header {
   text-align: center;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .notification-header h2 {
   font-size: 1.5rem;
@@ -40,4 +42,11 @@ body {
 }
 .notification-card span {
   color: #333;
+}
+#close-notification {
+    background: none;
+    color: #333;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
 }
