--- a/web-stuff/css/notification.css
+++ b/web-stuff/css/notification.css
@@ -17,6 +17,7 @@ body {
   padding: 20px;
 }
 .notification-header {
+  font-size: large;
   text-align: center;
   margin-bottom: 20px;
   display: flex;
@@ -43,10 +44,24 @@ body {
 .notification-card span {
   color: #333;
 }
+.notification-info
+{
+  font-weight: normal;
+  text-align: left;
+  font-size: 2.5vh;
+  padding: 3.75vh;
+}
+.notification-info-title
+{
+  font-weight: bold;
+  text-align: center;
+  font-size: 4vh;
+  padding: 4vh;
+}
 #close-notification {
     background: none;
-    color: #333;
+    color: #010058;
     border: none;
-    font-size: 1.5rem;
+    font-size: 3rem;
     cursor: pointer;
 }
